--- a/iconitemview/build.gradle
+++ b/iconitemview/build.gradle
@@ -2,16 +2,16 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
 
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 28
-        versionCode 10
-        versionName "1.0.9"
+        targetSdkVersion 29
+        versionCode 11
+        versionName "1.1.0"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
 
@@ -27,10 +27,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+//    testImplementation 'junit:junit:4.12'
+//    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+//    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
 
 //项目主页
@@ -42,7 +42,7 @@ def libName = "iconitemview"
 //发布到组织名称名字，必须填写
 group = "com.zxn.iconitemview"
 // 版本号，下次更新是只需要更改版本号即可
-version = "1.0.9"
+version = "1.1.0"
 //上面配置后上传至JCenter后的编译路径是这样的： compile 'com.zxn.iconitemview:iconitemview:1.0.0'
 //生成源文件
 task sourcesJar(type: Jar) {
